--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Python ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
@@ -26,15 +26,29 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyinstaller
+          pip install pyinstaller colorama
 
       - name: Build executable with PyInstaller
         run: |
           pyinstaller --onefile --name OpenCoreLogAnalyzer main.py
 
-      - name: Upload artifact
+      - name: Upload artifact (Windows)
+        if: matrix.os == 'windows-latest'
         uses: actions/upload-artifact@v4
         with:
-          name: OpenCoreLogAnalyzer-${{ matrix.os }}
-          path: |
-            dist/OpenCoreLogAnalyzer${{ matrix.os == 'windows-latest' && '.exe' || '' }}
+          name: OpenCoreLogAnalyzer-windows-${{ github.sha }}
+          path: dist/OpenCoreLogAnalyzer.exe
+
+      - name: Upload artifact (Linux)
+        if: matrix.os == 'ubuntu-latest'
+        uses: actions/upload-artifact@v4
+        with:
+          name: OpenCoreLogAnalyzer-linux-${{ github.sha }}
+          path: dist/OpenCoreLogAnalyzer
+
+      - name: Upload artifact (macOS)
+        if: matrix.os == 'macos-latest'
+        uses: actions/upload-artifact@v4
+        with:
+          name: OpenCoreLogAnalyzer-macos-${{ github.sha }}
+          path: dist/OpenCoreLogAnalyzer
